Modified category CSS

--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
 <body>
 
     <!-- Category section -->
-    <div class="category-list" style="display: flex; justify-content: space-around; padding: 20px 0; margin-top: 80px; margin-left: 20vw; margin-right: 20vw; text-align: center;">
+    <div class="category-list">
         <div class="category-item">
-            <img src="./images/1605166846.avif" alt="Category 1" style="width: 100px; height: 100px; border-radius: 50%;">
+            <img src="./images/1605166846.avif" alt="Hot Sale">
             <p>Hot Sale</p>
         </div>
         <div class="category-item">
-            <img src="./images/1668046649.avif" alt="Category 2" style="width: 100px; height: 100px; border-radius: 50%;">
+            <img src="./images/1668046649.avif" alt="Vintage Collection">
             <p>Vintage Collection</p>
         </div>
         <div class="category-item">
-            <img src="./images/1607624970.avif" alt="Category 3" style="width: 100px; height: 100px; border-radius: 50%;">
+            <img src="./images/1607624970.avif" alt="Rare Finds">
             <p>Rare Finds</p>
         </div>
         <div class="category-item">
-            <img src="./images/1578792405.avif" alt="Category 3" style="width: 100px; height: 100px; border-radius: 50%;">
+            <img src="./images/1578792405.avif" alt="Classic Machines">
             <p>Classic Machines</p>
         </div>
         <div class="category-item">
-            <img src="./images/754216711.avif" alt="Category 3" style="width: 100px; height: 100px; border-radius: 50%;">
+            <img src="./images/754216711.avif" alt="Timeless Treasures">
             <p>Timeless Treasures</p>
         </div>
     </div>
@@ -38,7 +38,7 @@
     <div class="product-list">
         <div class="product-card">
             <a href="product.html?id=1605166846">
-                <img src="./images/1605166846.avif" alt="Veggie" class="product-img">
+                <img src="./images/1605166846.avif" class="product-img">
                 <p class="product-desc">Special Gift, Best Gift, Underwood No. 5 Typewriter - Classic Black, Working Underwood Typewriter, QWERTY keyboard,QWERTY typewriter</p>
             </a>
             <p class="product-price">$1,690.86</p>
@@ -46,7 +46,7 @@
         </div>
         <div class="product-card">
             <a href="product.html?id=754216711">
-                <img src="./images/754216711.avif" alt="Veggie" class="product-img">
+                <img src="./images/754216711.avif" class="product-img">
                 <p class="product-desc">Underwood Typewriter - Antique Elegance, Perfectly Functional, an Exquisite Gift- Vintage Typewriter Working</p>
             </a>
             <p class="product-price">$1,670.57</p>
@@ -54,14 +54,14 @@
         </div>
         <div class="product-card">
             <a href="product.html?id=1668046649">
-                <img src="./images/1668046649.avif" alt="Veggie" class="product-img">
+                <img src="./images/1668046649.avif" class="product-img">
                 <p class="product-desc">Typewriter Underwood</p>
             </a>
             <p class="product-price">$2,304.50</p>
         </div>
         <div class="product-card">
             <a href="product.html?id=1541056939">
-                <img src="./images/1541056939.webp" alt="Veggie" class="product-img">
+                <img src="./images/1541056939.webp" class="product-img">
                 <p class="product-desc">Ultra Portable - Underwood 3 Bank Working Typewriter, Rare Model and Junior typewriter, Vintage typewriter, Collectible Typewriter</p>
             </a>
             <p class="product-price">$1,389.51</p>
@@ -69,7 +69,7 @@
         </div>
         <div class="product-card">
             <a href="product.html?id=938757911">
-                <img src="./images/938757911.avif" alt="Veggie" class="product-img">
+                <img src="./images/938757911.avif" class="product-img">
                 <p class="product-desc">Underwood Typewriter 1925 | Vintage Elegance | Antique Charm | Home Decor | Vintage Gifts | Office Gift- Vintage Typewriter Working</p>
             </a>
             <p class="product-price">$1,440.61</p>
@@ -77,7 +77,7 @@
         </div>
         <div class="product-card">
             <a href="product.html?id=1578792405">
-                <img src="./images/1578792405.avif" alt="Veggie" class="product-img">
+                <img src="./images/1578792405.avif" class="product-img">
                 <p class="product-desc">Underwood No5 Typewriter, Black Underwood, Working Underwood Special Tpewriter</p>
             </a>
             <p class="product-price">$1,690.86</p>
@@ -85,7 +85,7 @@
         </div>
         <div class="product-card">
             <a href="product.html?id=1691768669">
-                <img src="./images/1691768669.avif" alt="Veggie" class="product-img">
+                <img src="./images/1691768669.avif" class="product-img">
                 <p class="product-desc">Underwood No5 Typewriter, Black Underwood, Working Underwood Special Tpewriter</p>
             </a>
             <p class="product-price">$1,859.94</p>
@@ -93,7 +93,7 @@
         </div>
         <div class="product-card">
             <a href="product.html?id=1607624970">
-                <img src="./images/1607624970.avif" alt="Veggie" class="product-img">
+                <img src="./images/1607624970.avif" class="product-img">
                 <p class="product-desc">Olympia Splendid Typewriter,Red Elegance with Matching Bag,The Perfect Gift for Any Occasion,Ideal for Parents,Siblings,Retirement gift</p>
             </a>
             <p class="product-price">$935.68</p>
@@ -101,7 +101,7 @@
         </div>
         <div class="product-card">
             <a href="product.html?id=1620091477">
-                <img src="./images/1620091477.avif" alt="Veggie" class="product-img">
+                <img src="./images/1620091477.avif" class="product-img">
                 <p class="product-desc">Erika Typewriter S - Black Vintage Writers and Vintage Enthusiasts - Premium Quality Antique Typewriter with Old World Elegance and Wood Bag</p>
             </a>
             <p class="product-price">$853.88</p>
@@ -109,7 +109,7 @@
         </div>
         <div class="product-card">
             <a href="product.html?id=1544565011">
-                <img src="./images/1544565011.avif" alt="Veggie" class="product-img">
+                <img src="./images/1544565011.avif" class="product-img">
                 <p class="product-desc">Yellow Olympia SM3 Typewriter with Matching Yellow Bag - QWERTY Keyboard for Timeless Writing</p>
             </a>
             <p class="product-price">$845.43</p>
@@ -120,7 +120,7 @@
 
         <div class="product-card">
             <a href="product.html?id=1605166846">
-                <img src="./images/1605166846.avif" alt="Veggie" class="product-img">
+                <img src="./images/1605166846.avif" class="product-img">
                 <p class="product-desc">Special Gift, Best Gift, Underwood No. 5 Typewriter - Classic Black, Working Underwood Typewriter, QWERTY keyboard,QWERTY typewriter</p>
             </a>
             <p class="product-price">$1,690.86</p>
@@ -128,7 +128,7 @@
         </div>
         <div class="product-card">
             <a href="product.html?id=754216711">
-                <img src="./images/754216711.avif" alt="Veggie" class="product-img">
+                <img src="./images/754216711.avif" class="product-img">
                 <p class="product-desc">Underwood Typewriter - Antique Elegance, Perfectly Functional, an Exquisite Gift- Vintage Typewriter Working</p>
             </a>
             <p class="product-price">$1,670.57</p>
@@ -136,14 +136,14 @@
         </div>
         <div class="product-card">
             <a href="product.html?id=1668046649">
-                <img src="./images/1668046649.avif" alt="Veggie" class="product-img">
+                <img src="./images/1668046649.avif" class="product-img">
                 <p class="product-desc">Typewriter Underwood</p>
             </a>
             <p class="product-price">$2,304.50</p>
         </div>
         <div class="product-card">
             <a href="product.html?id=1541056939">
-                <img src="./images/1541056939.webp" alt="Veggie" class="product-img">
+                <img src="./images/1541056939.webp" class="product-img">
                 <p class="product-desc">Ultra Portable - Underwood 3 Bank Working Typewriter, Rare Model and Junior typewriter, Vintage typewriter, Collectible Typewriter</p>
             </a>
             <p class="product-price">$1,389.51</p>
@@ -151,7 +151,7 @@
         </div>
         <div class="product-card">
             <a href="product.html?id=938757911">
-                <img src="./images/938757911.avif" alt="Veggie" class="product-img">
+                <img src="./images/938757911.avif" class="product-img">
                 <p class="product-desc">Underwood Typewriter 1925 | Vintage Elegance | Antique Charm | Home Decor | Vintage Gifts | Office Gift- Vintage Typewriter Working</p>
             </a>
             <p class="product-price">$1,440.61</p>
@@ -159,7 +159,7 @@
         </div>
         <div class="product-card">
             <a href="product.html?id=1578792405">
-                <img src="./images/1578792405.avif" alt="Veggie" class="product-img">
+                <img src="./images/1578792405.avif" class="product-img">
                 <p class="product-desc">Underwood No5 Typewriter, Black Underwood, Working Underwood Special Tpewriter</p>
             </a>
             <p class="product-price">$1,690.86</p>
@@ -167,7 +167,7 @@
         </div>
         <div class="product-card">
             <a href="product.html?id=1691768669">
-                <img src="./images/1691768669.avif" alt="Veggie" class="product-img">
+                <img src="./images/1691768669.avif" class="product-img">
                 <p class="product-desc">Underwood No5 Typewriter, Black Underwood, Working Underwood Special Tpewriter</p>
             </a>
             <p class="product-price">$1,859.94</p>
@@ -175,7 +175,7 @@
         </div>
         <div class="product-card">
             <a href="product.html?id=1607624970">
-                <img src="./images/1607624970.avif" alt="Veggie" class="product-img">
+                <img src="./images/1607624970.avif" class="product-img">
                 <p class="product-desc">Olympia Splendid Typewriter,Red Elegance with Matching Bag,The Perfect Gift for Any Occasion,Ideal for Parents,Siblings,Retirement gift</p>
             </a>
             <p class="product-price">$935.68</p>
@@ -183,7 +183,7 @@
         </div>
         <div class="product-card">
             <a href="product.html?id=1620091477">
-                <img src="./images/1620091477.avif" alt="Veggie" class="product-img">
+                <img src="./images/1620091477.avif" class="product-img">
                 <p class="product-desc">Erika Typewriter S - Black Vintage Writers and Vintage Enthusiasts - Premium Quality Antique Typewriter with Old World Elegance and Wood Bag</p>
             </a>
             <p class="product-price">$853.88</p>
@@ -191,7 +191,7 @@
         </div>
         <div class="product-card">
             <a href="product.html?id=1544565011">
-                <img src="./images/1544565011.avif" alt="Veggie" class="product-img">
+                <img src="./images/1544565011.avif" class="product-img">
                 <p class="product-desc">Yellow Olympia SM3 Typewriter with Matching Yellow Bag - QWERTY Keyboard for Timeless Writing</p>
             </a>
             <p class="product-price">$845.43</p>
