--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>PrintHub Canada - Shop for handmade, vintage, custom, and unique gifts for everyone</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Professional website selling antique typewriters in Canada, offering a variety of styles and brands of antique typewriters.">
+    <meta name="keywords" content="Canada, antique typewriter, typewriter, antique, vintage, collectibles, typewriter collection, typewriter restoration, Canadian antique, Canadian typewriter, Canadian antique typewriter">
+    <title>PrintHub Canada - Shop for handmade, vintage, custom, and unique gifts for everyone</title>
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/common.css">
     <!-- This css file is only for home page -->
