add contact-us btn

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         </div>
     </div>
 
-    
+    <a href="contact.html" id="floating-button">Contact Us</a>
 </body>
 
 <script src="./js/common.js"></script>
