--- a/index.html
+++ b/index.html
@@ -202,9 +202,39 @@
         </div>
     </div>
 
+    <!-- FAQ section -->
+    <div class="faq-container">
+        <h1>Frequently Asked Questions</h1>
+        <div class="faq-item">
+            <div class="faq-question">What can you find on PrintHub?<span class="arrow">&#9660;</span></div>
+            <div class="faq-answer">
+                <p>
+                    PrintHub is the premier destination for vintage printing machines, offering a unique blend of nostalgia and functionality.<br><br>
+                    Discover the charm of antique craftsmanship with our carefully curated selection of vintage printing machines, each one a testament to a bygone era of printing excellence. From classic letterpress machines to retro typewriters, our collection is sure to inspire both collectors and enthusiasts alike.<br><br>
+                    Whether you're a seasoned printer looking to add to your collection or a newcomer to the world of vintage printing, PrintHub has something for everyone. Browse our wide range of refurbished machines, each meticulously restored to its former glory by our team of expert technicians.<br><br>
+                    Experience the joy of printing your own unique creations with our vintage machines, perfect for DIY projects, handmade cards, or adding a touch of vintage flair to your home office. With PrintHub, you can bring the timeless charm of vintage printing into your life.<br><br>
+                    When you're looking for something truly special that you won't find anywhere else, turn to PrintHub for all your vintage printing needs.<br><br>
+                </p>
+            </div>
+        </div>
+        <div class="faq-item">
+            <div class="faq-question">How does PrintHub work?<span class="arrow">&#9660;</span></div>
+            <div class="faq-answer">
+                <p>
+                    <strong>How to buy on PrintHub</strong><br>
+                    Shopping on PrintHub is a breeze. Each item available on PrintHub is handcrafted, designed, or carefully curated by another individual, adding a unique touch to your shopping experience. Customers can explore a diverse range of products, spanning from vintage printing machines to personalized gifts, and easily filter their search by price, estimated delivery date, seller location, and more. Payments are securely processed on PrintHub, and sellers ship your selected items directly to your doorstep.<br><br>
+                    <strong>How to sell on PrintHub</strong><br>
+                    PrintHub provides sellers with a platform to set up a shop and reach a global audience of active buyers. It’s safe and easy to start selling on PrintHub Canada. The platform simplifies transactions, provides tools for managing orders, and offers tools to help you grow your business. Whether you want to shift your side gig into the spotlight or add some extra income, PrintHub offers a vibrant community where creativity and connection thrive.<br><br>
+                </p>
+            </div>
+        </div>
+    </div>
+
     <a href="contact.html" id="floating-button">Contact Us</a>
+
 </body>
 
-<script src="./js/common.js"></script>
+<script src="js/common.js"></script>
+<script src="js/index.js"></script>
 
 </html>
