--- a/product.html
+++ b/product.html
@@ -40,7 +40,7 @@
             is as smooth and enjoyable as possible.
           </p>
         </div>
-        <a href="\aboutus.html">
+        <a href="\contact.html">
           <button class="btn">Contact Us</button>
         </a>
       </section>
